--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,9 @@
-<h1>Hello! Rendered from ejs view file!!</h1>
+<h1>Hello! Rendered from Home Page!!</h1>
+
+<section id="feed-post">
+    <h4>Posts</h4>
+    <form action="" id="new-post-form" method="POST">
+        <textarea name="content" id="" cols="30" rows="3"></textarea>
+        <input type="submit" value="Post">
+    </form>
+</section>
