--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,9 @@
-<h1>Hello! Rendered from Home Page!!</h1>
+<link rel="stylesheet" href="/css/home.css">
 
 <section id="feed-post">
     <h4>Posts</h4>
     <form action="" id="new-post-form" method="POST">
-        <textarea name="content" id="" cols="30" rows="3"></textarea>
+        <textarea name="content" id="" cols="30" rows="3" placeholder="Type here..."></textarea>
         <input type="submit" value="Post">
     </form>
 </section>
