--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,6 +1,14 @@
 <link rel="stylesheet" href="/css/user_profile.css">
 
-
-<h1>Hello from Profile Page</h1>
-<p>Name: <%= user.name%> </p>
-<p>Email: <%= user.email%></p>
+<% if(user.id == profile_user.id) { %>
+ <!-- If user matches then show the form-->
+ <form action="/users/update/<%= profile_user.id %>" method="POST">
+    <input type="text" name="name" placeholder="Your Name" value="<%= profile_user.name %>" required>
+    <input type="email" name="email" placeholder="Your Email" value="<%= profile_user.email %>" required>
+    <input type="submit" vlaue="Update">
+ </form>
+<% } else {%>
+ <!-- else show only the profile info-->
+ <p>Name: <%= profile_user.name %> </p>
+ <p>Email: <%= profile_user.email %></p>
+<% } %>
