--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,7 @@
         <title>
             <%= title %>
         </title>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     </head>
     <body>
         <%- include ('_header'); %>
@@ -10,6 +11,11 @@
         <% if(flash.success && flash.success.length > 0){ %>
             <h5>
                 <%= flash.success %>
+            </h5>    
+        <% } %>
+        <% if(flash.error && flash.error.length > 0){ %>
+            <h5>
+                <%= flash.error %>
             </h5>    
         <% } %>
 
