--- a/assets/CSS/header.css
+++ b/assets/CSS/header.css
@@ -1,12 +1,56 @@
-#nav-bar{
-    background-color: rgb(228, 248, 117);
-    color: blue;
-    display:flex;
-    /* justify-content: space-between; */
-    padding:10px;
-    list-style: none;
-}
-#nav-bar li {
-    margin: 0 10px;
-}
+/* post.css */
 
+header {
+    background-color: #333;
+    padding: 10px;
+  }
+  
+  #nav-bar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  #nav-bar li {
+    color: #fff;
+    font-size: 18px;
+  }
+  
+  #nav-bar li a {
+    text-decoration: none;
+    color: #fff;
+  }
+  
+  #nav-bar li a:hover {
+    text-decoration: underline;
+  }
+  
+  #nav-bar-sectionTwo {
+    display: flex;
+    align-items: center;
+  }
+  
+  #nav-bar-sectionTwo li {
+    margin-left: 10px;
+  }
+  
+  /* Colors */
+  #nav-bar li:nth-child(1) {
+    color:#1864ab;
+  }
+  
+  #nav-bar-sectionTwo li:nth-child(1) {
+    color: #fdb827;
+  }
+  
+  #nav-bar-sectionTwo li:nth-child(2) a {
+    color: #2dc937;
+  }
+  
+  #nav-bar-sectionTwo li:nth-child(3) a {
+    color: #007bff;
+  }
+  
