--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,4 +1,7 @@
-<li id="post-<%= post._id %>">
+<link rel="stylesheet" href="/css/post.css">
+
+
+<li id="post-<%= post._id %>" class="Post-List">
   <p>
     <% if (locals.user && locals.user.id == post.user.id){ %>
     <small>
