Likes and Making Friendslogic Insert

--- a/assets/CSS/home.css
+++ b/assets/CSS/home.css
@@ -4,12 +4,22 @@ h1 {
     color:#1864ab;
     font-size: 32px;
     margin-bottom: 20px;
+    margin-left: 30%;
+  }
+  #home-container{
+    display: flex;
+    width: 1000px;
+    margin: auto;
+    gap: 10%;
   }
   
   #feed-posts {
     background-color: #f2f2f2;
     padding: 20px;
     border-radius: 5px;
+    width: 70%;
+    height: 100%;
+    margin-bottom: 10%;
   }
   
   #feed-posts h4 {
@@ -43,29 +53,41 @@ h1 {
 
 /* friend-list.css */
 
-#user-friends {
-    padding: 20px;
+#users {
+  background-color: #f2f2f2;
+  padding: 20px;
+  border-radius: 5px;
+  width: 30%;
+  display:flex;
+  flex-direction: column;  
+  gap: 15%;
+  height: 100vh;
+  }
+  #users section {
+    background-color: white;
+    border-radius: 10px;
+    padding-left: 10px;
   }
   
-  #user-friends h4 {
+  #users h4 {
     color: #1877f2;
     font-size: 20px;
     margin-bottom: 10px;
   }
   
-  #user-friends p {
+  #users p {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
   }
   
-  #user-friends a {
+  #users a {
     color: #1877f2;
     text-decoration: none;
     margin-left: 10px;
   }
   
-  #user-friends img {
+  #users img {
     width: 40px;
     height: 40px;
     border-radius: 50%;
