--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -2,7 +2,9 @@
 
 <header>
   <ul id = 'nav-bar'>
-    <li>Codeial</li>
+    <li>
+      <a class="home-button" style="text-decoration: none;"  href="/">Codeial</a>
+    </li>
     <div id="nav-bar-setionTwo">
     <% if(locals.user){%>
     <li><%= user.name%></li>
