--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,18 +1,42 @@
-<link rel="stylesheet" href="/css/user_profile.css">
+<link rel="stylesheet" href="/css/user_profile.css" />
+<div id="profile-container">
+  <img
+    src="<%= profile_user.avatar %>"
+    alt="<%= profile_user.name %>"
+    width="100"
+  />
 
-<img src="<%= user.avatar %>" alt="<%= user.name %>" width="100">
+  <% if(user.id == profile_user.id) { %>
+  <!-- If user matches then show the form-->
+  <h4>Update Your Details...</h4>
+  <form
+    action="/users/update/<%= profile_user.id %>"
+    enctype="multipart/form-data"
+    method="POST"
+  >
+    <input
+      type="text"
+      name="name"
+      placeholder="Your Name"
+      value="<%= profile_user.name %>"
+      required
+    />
+    <input
+      type="email"
+      name="email"
+      placeholder="Your Email"
+      value="<%= profile_user.email %>"
+      required
+    />
 
-<% if(user.id == profile_user.id) { %>
- <!-- If user matches then show the form-->
- <form action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" method="POST">
-    <input type="text" name="name" placeholder="Your Name" value="<%= profile_user.name %>" required>
-    <input type="email" name="email" placeholder="Your Email" value="<%= profile_user.email %>" required>
+    <input type="file" name="avatar" placeholder="Profile Picture" />
+    <input type="submit" vlaue="Update" />
+  </form>
+  <% } else {%>
+  <!-- else show only the profile info-->
+  <p>Name: <%= profile_user.name %></p>
+  <p>Email: <%= profile_user.email %></p>
+  <a href="/friends/create/?loginUser=<%= user.id %>&targetUser=<%= profile_user.id%>">Add Friend</a>
 
-    <input type="file" name="avatar" placeholder="Profile Picture">
-    <input type="submit" vlaue="Update">
- </form>
-<% } else {%>
- <!-- else show only the profile info-->
- <p>Name: <%= profile_user.name %> </p>
- <p>Email: <%= profile_user.email %></p>
-<% } %>
+  <% } %>
+</div>
