--- a/assets/CSS/header.css
+++ b/assets/CSS/header.css
@@ -5,6 +5,10 @@ header {
     padding: 10px;
   }
   
+.home-button:hover{
+ font-size: 20px;
+}
+
   #nav-bar {
     display: flex;
     align-items: center;
