--- a/assets/CSS/user_profile.css
+++ b/assets/CSS/user_profile.css
@@ -1,3 +1,46 @@
 body {
-    background-color: lightblue; }
+    background-color: lightblue;
+ }
+ #profile-container {
+    width: 900px;
+    margin:auto;
+    text-align: center;
+ }
+ img{
+    margin-bottom: 20px;
+ }
+  
+ form {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  input[type="file"],
+  input[type= "text"],
+  input[type="email"],
+  input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+  }
+  
+  input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    color: #fff;
+    background-color: #1864ab;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  input[type="submit"]:hover {
+    background-color:#339af0;
+  }
   
