--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="/css/footer.css">
+
 <footer>
-    This is a footer
+    Copyright &copy; 2023 Bhavya Tiwari
 </footer>
