--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,43 +1,73 @@
-<link rel="stylesheet" href="/css/home.css">
-
+<link rel="stylesheet" href="/css/home.css" />
 
 <h1>Codeial / <%= title %></h1>
 
-<section id="feed-posts">
-  <h4>Posts</h4>
-  <% if(locals.user){ %>
-  <form action="/posts/create" id="new-post-form" method="POST">
-    <textarea
-      name="content"
-      cols="30"
-      rows="3"
-      placeholder="Type Here..."
-      required
-    ></textarea>
-    <input type="submit" value="Post" />
-  </form>
-  <% } %>
+<div id="home-container">
+  <section id="feed-posts">
+    <h4>Posts</h4>
+    <% if(locals.user){ %>
+    <form action="/posts/create" id="new-post-form" method="POST">
+      <textarea
+        name="content"
+        cols="30"
+        rows="3"
+        placeholder="Type Here..."
+        required
+      ></textarea>
+      <input type="submit" value="Post" />
+    </form>
+    <% } %>
 
-  <div id="posts-list-container">
-    <ul>
-      <% for(post of posts){ %>
+    <div id="posts-list-container">
+      <ul>
+        <% for(post of posts){ %> <%- include('_post') %> <%} %>
+      </ul>
+    </div>
+  </section>
 
-      <%- include('_post') %>
+  <div id="users">
+    <% if(locals.user){%>
+    <section id="user-friends">
+      <h4>Friends</h4>
+     
+      <% if(locals.user.friendships.length > 0){%>
+      <% for(let u = 0; u < locals.user.friendships.length ; u++){ %>
 
+      <p>
+          <% let newArray = locals.user.friendships[u].split("-")%>
+          <a href="/users/profile/<%= newArray[2] %>"> <%= newArray[1] %> </a>
+      </p>
+
+      <% } %>
       <%} %>
-    </ul>
+      
+    </section>
+    <% } %>
+
+    <section id="user-list">
+      <h4>Users</h4>
+      <% for(u of all_users){ %>
+      <p>
+        <% if(locals.user && u.name == locals.user.name){%>
+          <a href="/users/profile/<%= u.id %>"> <%= u.name%> (My Profile)</a>
+        <% }else{ %>
+          <a href="/users/profile/<%= u.id %>"> <%= u.name%> </a>
+        <%} %>
+      </p>
+      <% } %>
+    </section>
   </div>
-</section>
+</div>
 
-<section id="user-friends">
-  <h4>Friends</h4>
-  <% for(u of all_users){ %>
-    <p>
-      <a href="/users/profile/<%= u.id %>">
-        <%= u.name%>
-      </a>
-    </p>
-  <% } %>
-</section>
-
+<!-- importing this script for creating the comments -->
+<script src="/js/home_post_comments.js"></script>
 <script src="/js/home_posts.js"></script>
+
+<!-- CHANGE :: import the script file for toggle likes, also run it over for the already present posts and comments on the page -->
+<script src="js/toggle_likes.js"></script>
+<script>
+  $(".toggle-like-button").each(function () {
+    let self = this;
+    let toggleLike = new ToggleLike(self);
+  });
+</script>
