Add Chat Engine

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -57,8 +57,14 @@
       <% } %>
     </section>
   </div>
+
+  <%- include('_chat_box') -%>
+
 </div>
 
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.1/socket.io.js"></script>
+<script src="/js/chat_engine.js"></script>
 <!-- importing this script for creating the comments -->
 <script src="/js/home_post_comments.js"></script>
 <script src="/js/home_posts.js"></script>
@@ -71,3 +77,8 @@
     let toggleLike = new ToggleLike(self);
   });
 </script>
+<% if(locals.user){ %>
+  <script>
+    new ChatEngine('user-chat-box', '<%= locals.user.email %>')
+ </script>
+<% } %>
