--- a/assets/CSS/home.css
+++ b/assets/CSS/home.css
@@ -23,9 +23,10 @@ h1 {
 }
 
 #feed-posts h4 {
-  color: #4a148c;
+  color:#faa2c1;
   font-size: 24px;
   margin-bottom: 10px;
+  margin-left: 42px;
 }
 
 #new-post-form textarea {
@@ -93,4 +94,8 @@ h1 {
   border-radius: 50%;
   object-fit: cover;
   margin-right: 10px;
+}
+
+.comment-list{
+  list-style: none;
 }
