--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -2,7 +2,7 @@
 
 
 <li id="post-<%= post._id %>" class="Post-List">
-  <p>
+  <p class="post-content">
     <% if (locals.user && locals.user.id == post.user.id){ %>
     <small>
       <a class="delete-post-button" href="/posts/destroy/<%= post.id %>">X</a>
