--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/header.css">
+<link rel="stylesheet" href="/css<%= assetPath('header.css') %>">
 
 <header>
   <ul id = 'nav-bar'>
