--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,8 @@
             <%= title %>
         </title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+        <link rel="stylesheet" href="/css<%= assetPath('layout.css') %>">
+     
     </head>
     <body>
         <%- include ('_header'); %>
