--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/footer.css">
+<link rel="stylesheet" href="/css<%= assetPath('footer.css') %>">
 
 <footer>
     Copyright &copy; 2023 Bhavya Tiwari
