--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/post.css">
+<link rel="stylesheet" href="/css<%= assetPath('post.css') %>">
 
 
 <li id="post-<%= post._id %>" class="Post-List">
