--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/home.css" />
+<link rel="stylesheet" href="/css<%= assetPath('home.css') %>" />
 
 <h1>Codeial / <%= title %></h1>
 
