--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/sign-in.css">
+<link rel="stylesheet" href="/css<%= assetPath('sign-in.css') %>">
 
 <h1>Sign In</h1>
 
