--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/sign-up.css">
+<link rel="stylesheet" href="/css<%= assetPath('sign-up.css') %>">
 
 
 <h1>Sign Up</h1>
